--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "stylelint": "^13.13.1",
     "stylelint-order": "^4.1.0"
   },
