--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "login",
   "version": "0.1.0",
+  "homepage": "github-page/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
